# jwt-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  config.py  docker-compose.yml  main.py  py.typed  pyproject.toml  requirements-dev.txt  requirements.txt
core/: async_security.py  diff.py  forgery.py  jwks.py  logging_config.py  parser.py  security.py  sensitive_scanner.py  verification.py
plugins/: README.md  plugins.py
scripts/: batch_audit.sh
utils/: io.py  report.py
wordlists/: common_secrets.txt
