# pyproject.toml

# ──────────────────────────────────────────────────────────────────────────────
# Build system
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────────────────
[project]
name = "jwt-analyzer"
version = "1.2.0"
description = "Professional JWT security analysis CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = [
    "jwt",
    "json-web-token",
    "security",
    "pentest",
    "cryptography",
    "token",
    "audit",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.4.0",
    "tox>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
all = [
    "jwt-analyzer[dev]",
]

[project.urls]
Homepage   = "https://github.com/yourusername/jwt-analyzer"
Repository = "https://github.com/yourusername/jwt-analyzer"
Issues     = "https://github.com/yourusername/jwt-analyzer/issues"
Changelog  = "https://github.com/yourusername/jwt-analyzer/releases"

[project.scripts]
jwt-analyzer = "main:cli"

# ──────────────────────────────────────────────────────────────────────────────
# Hatch build configuration
# Adjust the package discovery below to match your project layout.
# ──────────────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
# Use ONE of the following blocks depending on your layout:

# Option A — flat layout (single main.py at the project root, your current setup):
include = ["main.py", "jwt-analyzer/**/*.py"]
exclude = [".github", "tests", "wordlists", "*.toml", "*.md", "*.yml", "*.yaml"]

# Option B — src layout with a jwt-analyzer package directory:
# packages = ["jwt-analyzer"]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — linter & formatter
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py39"
extend-exclude = ["wordlists", "build", "dist", ".venv", ".tox"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "PL",  # pylint
    "RET", # flake8-return
    "TRY", # tryceratops
    "YTT", # flake8-2020
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "EXE", # flake8-executable
]
ignore = [
    "S101",    # Use of assert — fine in tests
    "S104",    # Hardcoded bind to all interfaces — we don't bind, OK
    "PLR0913", # Too many arguments
    "TRY003",  # Long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S",       # security rules off in tests
    "PLR2004", # magic values used in comparisons
    "ARG",     # unused function arguments (fixtures)
    "FBT",     # boolean trap (fixtures)
    "SLF001",  # private member access (white-box tests)
]
"main.py" = ["BLE001"]   # blind-except acceptable in CLI entry point

[tool.ruff.lint.isort]
known-first-party = ["jwt-analyzer"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"

# ──────────────────────────────────────────────────────────────────────────────
# mypy — static type checking
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.9"
strict                = false
warn_return_any       = true
warn_unused_configs   = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "wordlists/",
    ".venv/",
]

[[tool.mypy.overrides]]
module                = "tests.*"
disallow_untyped_defs = false
check_untyped_defs    = false

# ──────────────────────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
addopts    = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=jwt-analyzer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths   = ["tests"]
markers     = [
    "slow:        marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ──────────────────────────────────────────────────────────────────────────────
# coverage — pytest-cov configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["jwt-analyzer"]
branch = true
omit   = [
    "tests/*",
    "wordlists/*",
    ".venv/*",
]

[tool.coverage.report]
precision    = 2
show_missing = true
skip_covered = false
fail_under   = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "\\.\\.\\.",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ──────────────────────────────────────────────────────────────────────────────
# bandit — security linter
# ──────────────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "wordlists", ".venv"]
skips        = ["B101"]   # assert usage (fine in our context)

# ──────────────────────────────────────────────────────────────────────────────
# tox — automated testing across Python versions and tasks
# Remove this block if you only use pre-commit / GitHub Actions.
# ──────────────────────────────────────────────────────────────────────────────
[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "lint", "security"]

[tool.tox.env_run_base]
deps     = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.lint]
deps = ["ruff>=0.1.0", "mypy>=1.5.0"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
    ["mypy", "main.py", "jwt-analyzer"],
]

[tool.tox.env.security]
deps     = ["bandit[toml]>=1.7.0"]
commands = [["bandit", "-r", "jwt-analyzer", "-c", "pyproject.toml"]]